--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -47,8 +47,8 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
-          <div class="add_banner"><a href="#"><img src="../images/bannerppal.png" alt=""></a></div>
+          <div class="logo_area"><a href="../index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
+          <div class="add_banner"><a href="index.html"><img src="../images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
     </div>
@@ -61,14 +61,14 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
-          <li><a href="#">Nivel Inicial</a></li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
+          <li><a href="pages/inicial.html">Nivel Inicial</a></li>
+          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Pastoral</a></li>
-              <li><a href="#">Salud</a></li>
-              <li><a href="#">Psicología/Filosofía</a></li>
-              <li><a href="#">Arte</a></li>
-              <li><a href="#">Tecnología</a></li>
+              <li><a href="pages/pastoral.html">Pastoral</a></li>
+              <li><a href="pages/pages_secundario/salud.html">Salud</a></li>
+              <li><a href="pages/pages_secundario/psicofilo.html">Psicología/Filosofía</a></li>
+              <li><a href="pages/pages_secundario/arte.html">Arte</a></li>
+              <li><a href="pages/pages_secundario/tecno.html">Tecnología</a></li>
             </ul>
           </li>
           <li><a href="#">Calendario de Eventos</a></li>
