--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="index.html" class="logo"><img src="images/logo.png" alt=""></a></div>
-          <div class="add_banner"><a href="#"><img src="images/bannerppal.png" alt=""></a></div>
+          <div class="logo_area"><a href="/index.html" class="logo"><img src="images/logo.png" alt=""></a></div>
+          <div class="add_banner"><a href="index.html"><img src="images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
     </div>
@@ -62,16 +62,16 @@
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
           <li><a href="pages/inicial.html">Nivel Inicial</a></li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
+          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="pages/pastoral.html">Pastoral</a></li>
-              <li><a href="#">Salud</a></li>
-              <li><a href="#">Psicología/Filosofía</a></li>
-              <li><a href="#">Arte</a></li>
-              <li><a href="#">Tecnología</a></li>
+              <li><a href="pages/salud.html">Salud</a></li>
+              <li><a href="pages/psicofilo.html">Psicología/Filosofía</a></li>
+              <li><a href="pages/arte.html">Arte</a></li>
+              <li><a href="pages/literatura.html">Tecnología</a></li>
             </ul>
           </li>
-          <li><a href="#">Calendario de Eventos</a></li>
+          <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
           <li><a href="#">Imágenes</a></li>
           <li><a href="pages/contact.html">Contactanos</a></li>
           <li><a href="pages/404.html"></a></li>//
@@ -296,32 +296,32 @@
             <ul class="photograph_nav  wow fadeInDown">
               <li>
                 <div class="photo_grid">
-                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img2.jpg" title="Photography Ttile 1"> <img src="images/photograph_img2.jpg" alt=""/></a> </figure>
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img2.jpg" title="Photography Ttile 1"> <img src="images/galeria/pimg3.jpeg" alt=""/></a> </figure>
                 </div>
               </li>
               <li>
                 <div class="photo_grid">
-                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img3.jpg" title="Photography Ttile 2"> <img src="images/photograph_img3.jpg" alt=""/> </a> </figure>
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img3.jpg" title="Photography Ttile 2"> <img src="images/galeria/pimg4.jpeg" alt=""/> </a> </figure>
                 </div>
               </li>
               <li>
                 <div class="photo_grid">
-                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img4.jpg" title="Photography Ttile 3"> <img src="images/photograph_img4.jpg" alt=""/> </a> </figure>
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img4.jpg" title="Photography Ttile 3"> <img src="images/galeria/pimg5.jpeg" alt=""/> </a> </figure>
                 </div>
               </li>
               <li>
                 <div class="photo_grid">
-                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img4.jpg" title="Photography Ttile 4"> <img src="images/photograph_img4.jpg" alt=""/> </a> </figure>
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img4.jpg" title="Photography Ttile 4"> <img src="images/galeria/pimg6.jpeg" alt=""/> </a> </figure>
                 </div>
               </li>
               <li>
                 <div class="photo_grid">
-                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img2.jpg" title="Photography Ttile 5"> <img src="images/photograph_img2.jpg" alt=""/> </a> </figure>
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img2.jpg" title="Photography Ttile 5"> <img src="images/galeria/pimg8.jpeg" alt=""/> </a> </figure>
                 </div>
               </li>
               <li>
                 <div class="photo_grid">
-                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img3.jpg" title="Photography Ttile 6"> <img src="images/photograph_img3.jpg" alt=""/> </a> </figure>
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="images/photograph_img3.jpg" title="Photography Ttile 6"> <img src="images/galeria/pimg10.jpeg" alt=""/> </a> </figure>
                 </div>
               </li>
             </ul>
