--- a/pages/pastoral.html
+++ b/pages/pastoral.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-<title>NIVEL INICIAL</title>
+<title>PASTORAL</title>
 <link href="../images/favicon2.ico" rel="shortcut icon" type="image/ico">
 <link href="../images/favicon2.ico" rel="icon" type="image/ico">
 
@@ -47,7 +47,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
+          <div class="logo_area"><a href="../index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
           <div class="add_banner"><a href="#"><img src="../images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
@@ -61,20 +61,20 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
-          <li><a href="#">Nivel Inicial</a></li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
+          <li><a href="pages/inicial.html">Nivel Inicial</a></li>
+          <li class="dropdown"> <a href="../pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Pastoral</a></li>
-              <li><a href="#">Salud</a></li>
-              <li><a href="#">Psicología/Filosofía</a></li>
-              <li><a href="#">Arte</a></li>
-              <li><a href="#">Tecnología</a></li>
+              <li><a href="../pages/pastoral.html">Pastoral</a></li>
+              <li><a href="../pages/salud.html">Salud</a></li>
+              <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
+              <li><a href="../pages/arte.html">Arte</a></li>
+              <li><a href="../pages/tecno.html">Tecnología</a></li>
             </ul>
           </li>
-          <li><a href="#">Calendario de Eventos</a></li>
-          <li><a href="#">Imágenes</a></li>
-          <li><a href="pages/contact.html">Contactanos</a></li>
-          <li><a href="pages/404.html"></a></li>//
+          <li><a href="../pages/calendario.html">Calendario de Eventos</a></li>
+          <li><a href="../pages/galeria.html">Imágenes</a></li>
+          <li><a href="../pages/contact.html">Contactanos</a></li>
+          <li><a href="../pages/404.html"></a></li>//
         </ul>
       </div>
     </nav>
@@ -116,12 +116,12 @@
         <div class="left_content">
           <div class="single_page">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="#">Technology</a></li>
-              <li class="active">Mobile</li>
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="#">...</a></li>
+              <li class="active">....</li>
             </ol>
             <h1>PASTORAL SANTA ROSA</h1>
-            <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
+            <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>...</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>....</a> </div>
             <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
               <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
 			  <p>Querida comunidad educativa, </p>
