--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       <div class="col-lg-12 col-md-12">
         <div class="latest_newsarea"> <span>Últimas Noticias</span>
           <ul id="ticker01" class="news_sticker">
-            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My First News Item</a></li>
-            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Second News Item</a></li>
-            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Third News Item</a></li>
-            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Four News Item</a></li>
-            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Five News Item</a></li>
-            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Six News Item</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Santa Misa Lunes a viernes 18hs</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Misa Domingos 11hs</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Secretaria parroquial lunes a viernes 17hs a 18:30hs</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Inscripciones Ciclo 2021 Abiertas</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Tardes Mágicas todos los Miercoles 15hs</a></li>
+            <!-- <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Six News Item</a></li>
             <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Seven News Item</a></li>
             <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Eight News Item</a></li>
-            <li><a href="#"><img src="images/news_thumbnail2.jpg" alt="">My Nine News Item</a></li>
+            <li><a href="#"><img src="images/news_thumbnail2.jpg" alt="">My Nine News Item</a></li> -->
           </ul>
           <div class="social_area">
             <ul class="social_nav">
