--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>NewsFeed | Pages | Contact</title>
+	
+<title>Contacto</title>
+<link href="./images/favicon2.ico" rel="shortcut icon" type="image/ico">
+<link href="./images/favicon2.ico" rel="icon" type="image/ico">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,20 +33,20 @@
         <div class="header_top">
           <div class="header_top_left">
             <ul class="top_nav">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#">Quiénes Somos</a></li>
+              <li><a href="pages/contact.html">Contacto</a></li>
             </ul>
           </div>
           <div class="header_top_right">
-            <p>Friday, December 05, 2045</p>
+            <p>***</p>
           </div>
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="../index.html" class="logo"><img src="../images/logo.jpg" alt=""></a></div>
-          <div class="add_banner"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
+          <div class="logo_area"><a href="../index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
+          <div class="add_banner"><a href="../index.html"><img src="../images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
     </div>
@@ -56,21 +58,21 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
-          <li class="active"><a href="../index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Home</span></a></li>
-          <li><a href="#">Technology</a></li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile</a>
+          <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
+          <li><a href="pages/inicial.html">Nivel Inicial</a></li>
+          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Android</a></li>
-              <li><a href="#">Samsung</a></li>
-              <li><a href="#">Nokia</a></li>
-              <li><a href="#">Walton Mobile</a></li>
-              <li><a href="#">Sympony</a></li>
+              <li><a href="pages/pastoral.html">Pastoral</a></li>
+              <li><a href="pages/salud.html">Salud</a></li>
+              <li><a href="pages/psicofilo.html">Psicología/Filosofía</a></li>
+              <li><a href="pages/arte.html">Arte</a></li>
+              <li><a href="pages/literatura.html">Tecnología</a></li>
             </ul>
           </li>
-          <li><a href="#">Laptops</a></li>
-          <li><a href="#">Tablets</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="404.html">404 Page</a></li>
+          <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
+          <li><a href="#">Imágenes</a></li>
+          <li><a href="pages/contact.html">Contactanos</a></li>
+          <li><a href="pages/404.html"></a></li>//
         </ul>
       </div>
     </nav>
@@ -80,15 +82,15 @@
       <div class="col-lg-12 col-md-12">
         <div class="latest_newsarea"> <span>Latest News</span>
           <ul id="ticker01" class="news_sticker">
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My First News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Second News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Third News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Four News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Five News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Six News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Seven News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail3.jpg" alt="">My Eight News Item</a></li>
-            <li><a href="#"><img src="../images/news_thumbnail2.jpg" alt="">My Nine News Item</a></li>
+            <<li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Santa Misa Lunes a viernes 18hs</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Misa Domingos 11hs</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Secretaria parroquial lunes a viernes 17hs a 18:30hs</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Inscripciones Ciclo 2021 Abiertas</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">Tardes Mágicas todos los Miercoles 15hs</a></li>
+            <!-- <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Six News Item</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Seven News Item</a></li>
+            <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Eight News Item</a></li>
+            <li><a href="#"><img src="images/news_thumbnail2.jpg" alt="">My Nine News Item</a></li> -->
           </ul>
           <div class="social_area">
             <ul class="social_nav">
