--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         <div class="slick_slider">
           <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider1.jpeg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/institucional.html">Memoria de la Gestación del cambio de nombre de Nuestra Querida Escuela </a></h2>
+              <h2><a class="slider_tittle" href="pages/institucional.html"> Memoria de la Gestación del cambio de nombre de Nuestra Querida Escuela </a></h2>
               <p>Historia de los tres niveles de la Institución</p>
             </div>
           </div>
-          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider2.jpg" alt=""></a>
+          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider2.png" alt=""></a>
             <div class="slider_article">
               <h2><a class="slider_tittle" href="pages/institucional.html">Periódico Digital Escolar en Tiempo de Pandemia</a></h2>
               <p>El periódico para jóvenes impulsa un plan de teletrabajo y una cabecera digital para que los alumnos confinados durante la pandemia de coronavirus editen un periódico colaborativo. La iniciativa se enmarca dentro del proyecto Periódico Escolar Digital.</p>
