--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
           </div>
           <div class="single_sidebar wow fadeInDown">
             <h2><span>Patrocinadores</span></h2>
-            <a class="sideAdd" href="#"><img src="images/add_img.jpg" alt=""></a> </div>
+            <a class="sideAdd" href="#"><img src="images/add_img.jpeg" alt=""></a> </div>
           <div class="single_sidebar wow fadeInDown">
             <h2><span>Categorias y Archivos</span></h2>
             <select class="catgArchive">
