--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
               <p>Todos los miércoles a las 15:00 conectate al Facebook de la Parroquia</p>
             </div>
           </div>
+		  <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider6.jpeg" alt=""></a>
+            <div class="slider_article">
+              <h2><a class="slider_tittle" href="pages/primario.html"> Colegio Parroquial Santa Rosa Informa</a></h2>
+              <p>Inscripciones Abiertas Ciclo 2021</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
