--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
           <li><a href="pages/inicial.html">Nivel Inicial</a></li>
+		  <li class="active"><a href="index.html"><span class="mobile-show">Inicio</span></a></li>
+          <li><a href="pages/primario.html">Nivel Primario</a></li>
           <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="pages/pastoral.html">Pastoral</a></li>
