--- a/pages/primario.html
+++ b/pages/primario.html
@@ -121,6 +121,8 @@
               <li class="active">Mobile</li>
             </ol>
             <h1>TARDES MÁGICAS</h1>
+<div><center><img src="../images/slider5.png" alt=""></a></center></div>
+			
             <!-- <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
             <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
               <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
