--- a/pages/salud.html
+++ b/pages/salud.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-<title>PASTORAL</title>
+<title>SALUD</title>
 <link href="../images/favicon2.ico" rel="shortcut icon" type="image/ico">
 <link href="../images/favicon2.ico" rel="icon" type="image/ico">
 
@@ -62,19 +62,21 @@
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
           <li><a href="pages/inicial.html">Nivel Inicial</a></li>
-          <li class="dropdown"> <a href="../pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
+		  <li class="active"><a href="index.html"><span class="mobile-show">Inicio</span></a></li>
+          <li><a href="../pages/primario.html">Nivel Primario</a></li>
+          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
-              <li><a href="../pages/salud.html">Salud</a></li>
-              <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
-              <li><a href="../pages/arte.html">Arte</a></li>
-              <li><a href="../pages/tecno.html">Tecnología</a></li>
+              <li><a href="pages/salud.html">Salud</a></li>
+              <li><a href="pages/psicofilo.html">Psicología/Filosofía</a></li>
+              <li><a href="pages/arte.html">Arte</a></li>
+              <li><a href="pages/literatura.html">Tecnología</a></li>
             </ul>
           </li>
-          <li><a href="../pages/calendario.html">Calendario de Eventos</a></li>
-          <li><a href="../pages/galeria.html">Imágenes</a></li>
-          <li><a href="../pages/contact.html">Contactanos</a></li>
-          <li><a href="../pages/404.html"></a></li>//
+          <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
+          <li><a href="#">Imágenes</a></li>
+          <li><a href="pages/contact.html">Contactanos</a></li>
+          <li><a href="pages/404.html"></a></li>//
         </ul>
       </div>
     </nav>
