--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,10 +65,10 @@
           <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
-              <li><a href="pages/salud.html">Salud</a></li>
-              <li><a href="pages/psicofilo.html">Psicología/Filosofía</a></li>
-              <li><a href="pages/arte.html">Arte</a></li>
-              <li><a href="pages/literatura.html">Tecnología</a></li>
+              <li><a href="../pages/salud.html">Salud</a></li>
+              <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
+              <li><a href="../pages/arte.html">Arte</a></li>
+              <li><a href="../pages/literatura.html">Literatura</a></li>
             </ul>
           </li>
           <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
