--- a/pages/about.html
+++ b/pages/about.html
@@ -115,13 +115,14 @@
       <div class="col-lg-8 col-md-8 col-sm-8">
         <div class="left_content">
           <div class="contact_area">
-            <h2>Contact Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dosectetur adipisicing elit, sed do.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h2>Contactanos</h2>
+            <p>Colegio Parroquial Santa Rosa - pertenece a la educación privada, EGB3 - dirección: Vieytes entre Avenida Crovara y Superi 40 - (CP: 1766) Tablada, La Matanza</p>
+			<P>Teléfono 4652-0940</P>
             <form action="#" class="contact_form">
               <input class="form-control" type="text" placeholder="Name*">
               <input class="form-control" type="email" placeholder="Email*">
               <textarea class="form-control" cols="30" rows="10" placeholder="Message*"></textarea>
-              <input type="submit" value="Send Message">
+              <input type="submit" value="Enviar">
             </form>
           </div>
         </div>
