--- a/pages/psicofilo.html
+++ b/pages/psicofilo.html
@@ -36,7 +36,7 @@
           <div class="header_top_left">
             <ul class="top_nav">
               <li><a href="index.html">Inicio</a></li>
-              <li><a href="#">Quiénes Somos</a></li>
+              <li><a href="pages/about.html">Quiénes Somos</a></li>
               <li><a href="pages/contact.html">Contacto</a></li>
             </ul>
           </div>
