--- a/pages/literatura.html
+++ b/pages/literatura.html
@@ -36,8 +36,8 @@
           <div class="header_top_left">
             <ul class="top_nav">
               <li><a href="index.html">Inicio</a></li>
-              <li><a href="pages/about.html">Quiénes Somos</a></li>
-              <li><a href="pages/contact.html">Contacto</a></li>
+              <li><a href="../pages/about.html">Quiénes Somos</a></li>
+              <li><a href="../pages/contact.html">Contacto</a></li>
             </ul>
           </div>
           <div class="header_top_right">
