--- a/pages/revista.html
+++ b/pages/revista.html
@@ -124,8 +124,8 @@
               <li class="active">....</li>
             </ol>
             <h1>REVISTA EDICIONES PARA DESCARGAR</h1>
-            <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Prácticas del Lenguaje</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Prof. Martín Pérez</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
+            <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Revista Parroquial</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Institucional</a> </div>
+            <!-- <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt=""> -->
               <h1>PRIMERA EDICIÓN</h1>
 			  </div>
 		<div>		
