--- a/pages/literatura.html
+++ b/pages/literatura.html
@@ -77,7 +77,7 @@
           <li><a href="#">Imágenes</a></li>
 		  <li><a href="pages/revista.html">Revista</a></li>
           <li><a href="pages/contact.html">Contactanos</a></li>
-          <li><a href="pages/404.html"></a></li>//
+          <li><a href="pages/404.html"></a></li>
         </ul>
       </div>
     </nav>
@@ -125,7 +125,7 @@
             </ol>
             <h1>TRABAJOS ESTUDIANTILES</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Prácticas del Lenguaje</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Prof. Martín Pérez</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
+            <!-- <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt=""> -->
               <h1>Presentación de Notas</h1>
 			  </div>
 		<div>		
