--- a/pages/about.html
+++ b/pages/about.html
@@ -39,14 +39,14 @@
             </ul>
           </div>
           <div class="header_top_right">
-            <p>***</p>
+            <p>****</p>
           </div>
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
           <div class="logo_area"><a href="../index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
-          <div class="add_banner"><a href="../index.html"><img src="../images/bannerppal.png" alt=""></a></div>
+          <div class="add_banner"><a href="#"><img src="../images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
     </div>
@@ -59,10 +59,10 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
-          <li><a href="pages/inicial.html">Nivel Inicial</a></li>
+          <li><a href="../pages/inicial.html">Nivel Inicial</a></li>
 		  <li class="active"><a href="index.html"><span class="mobile-show">Inicio</span></a></li>
           <li><a href="../pages/primario.html">Nivel Primario</a></li>
-          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
+          <li class="dropdown"> <a href="../pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
               <li><a href="../pages/salud.html">Salud</a></li>
@@ -71,11 +71,11 @@
               <li><a href="../pages/literatura.html">Literatura</a></li>
             </ul>
           </li>
-          <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
+          <li><a href="../pages/calendario.html">Calendario de Eventos</a></li>
           <li><a href="#">Imágenes</a></li>
-		  <li><a href="pages/revista.html">Revista</a></li>
-          <li><a href="pages/contact.html">Contactanos</a></li>
-          <li><a href="pages/404.html"></a></li>//
+		  <li><a href="../pages/revista.html">Revista</a></li>
+          <li><a href="../pages/contact.html">Contactanos</a></li>
+          <li><a href="pages/404.html"></a></li>
         </ul>
       </div>
     </nav>
