--- a/pages/pastoral.html
+++ b/pages/pastoral.html
@@ -61,10 +61,10 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
-          <li><a href="pages/inicial.html">Nivel Inicial</a></li>
+          <li><a href="../pages/inicial.html">Nivel Inicial</a></li>
 		  <li class="active"><a href="index.html"><span class="mobile-show">Inicio</span></a></li>
           <li><a href="../pages/primario.html">Nivel Primario</a></li>
-          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
+          <li class="dropdown"> <a href="../pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
               <li><a href="../pages/salud.html">Salud</a></li>
@@ -73,11 +73,11 @@
               <li><a href="../pages/literatura.html">Literatura</a></li>
             </ul>
           </li>
-          <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
+          <li><a href="../pages/calendario.html">Calendario de Eventos</a></li>
           <li><a href="#">Imágenes</a></li>
-		  <li><a href="pages/revista.html">Revista</a></li>
-          <li><a href="pages/contact.html">Contactanos</a></li>
-          <li><a href="pages/404.html"></a></li>//
+		  <li><a href="../pages/revista.html">Revista</a></li>
+          <li><a href="../pages/contact.html">Contactanos</a></li>
+          <li><a href="pages/404.html"></a></li>
         </ul>
       </div>
     </nav>
