--- a/pages/contact.html
+++ b/pages/contact.html
@@ -118,7 +118,7 @@
       <div class="col-lg-8 col-md-8 col-sm-8">
         <div class="left_content">
           <div class="contact_area">
-            <h2>Contatanos</h2>
+            <h2>Contactanos</h2>
             <p>Colegio Parroquial Santa Rosa - pertenece a la educación privada, EGB3 - dirección: Vieytes entre Avenida Crovara y Superi 40 - (CP: 1766) Tablada, La Matanza
 
 Teléfono 4652-0940</p>
