--- a/pages/primario.html
+++ b/pages/primario.html
@@ -18,6 +18,15 @@
 <link rel="stylesheet" type="text/css" href="../assets/css/jquery.fancybox.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/theme.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+<meta name="Excel Workbook Frameset">
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta name=ProgId content=Excel.Sheet>
+<meta name=Generator content="Microsoft Excel 15">
+<link rel=File-List href="../assets/cssfilelist.xml">
+<![if !supportTabStrip]>
+<link id="shLink" href="../assets/css/sheet001.htm">
+
+<link id="shLink">
 <!--[if lt IE 9]>
 <script src="../assets/js/html5shiv.min.js"></script>
 <script src="../assets/js/respond.min.js"></script>
@@ -119,10 +128,54 @@
         <div class="left_content">
           <div class="single_page">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="#">Technology</a></li>
-              <li class="active">Mobile</li>
+              <li><a href="../index.html">Inicio</a></li>
+              
             </ol>
+			<h1>EVENTOS PRIMARIA NOVIEMBRE Y DICIEMBRE</h1>
+			<div><center><body link="#0563C1" vlink="#954F72">
+
+<table border=0 cellpadding=0 cellspacing=0 width=461 style='border-collapse:
+ collapse;table-layout:fixed;width:346pt'>
+ <col width=227 style='mso-width-source:userset;mso-width-alt:8301;width:170pt'>
+ <col width=234 style='mso-width-source:userset;mso-width-alt:8557;width:176pt'>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl68 width=227 style='height:15.0pt;width:170pt'>ACTIVIDADES
+  NIVEL PRIMARIO:</td>
+  <td class=xl69 width=234 style='width:176pt'>FECHAS Y HORARIOS</td>
+ </tr>
+ <tr height=40 style='height:30.0pt'>
+  <td height=40 class=xl67 style='height:30.0pt'>NOCHE DE TEATRO:</td>
+  <td class=xl65 width=234 style='width:176pt'>26/11, 19 Y 20 Hs.<br>
+    27/11, 19 Hs.</td>
+ </tr>
+ <tr height=60 style='height:45.0pt'>
+  <td height=60 class=xl67 style='height:45.0pt'>MUESTRA DE INGLÉS:</td>
+  <td class=xl65 width=234 style='width:176pt'>4/12, <br>
+    T.M: 10 y 11 Hs.<br>
+    T.T: 15 y 16 Hs.</td>
+ </tr>
+ <tr height=60 style='height:45.0pt'>
+  <td height=60 class=xl67 style='height:45.0pt'>LA MUESTRA NAVIDEÑA</td>
+  <td class=xl65 width=234 style='width:176pt'>será el 9/12 a las 19 hs. para
+  los tres niveles con previa celebración de Misa.</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl67 style='height:15.0pt'>ACTO DE COLACIÓN</td>
+  <td class=xl66>16/12 18:30HS MISA 19HS ACTO</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl67 style='height:15.0pt'>ACTO FIN DE CURSO</td>
+  <td class=xl66>18:30HS MISA 19HS ACTO</td>
+ </tr>
+ <![if supportMisalignedColumns]>
+ <tr height=0 style='display:none'>
+  <td width=227 style='width:170pt'></td>
+  <td width=234 style='width:176pt'></td>
+ </tr>
+ <![endif]>
+</table>
+
+</body></div></center>
             <h1>TARDES MÁGICAS</h1>
 <div><center><img src="../images/slider5.png" width="400" height="300" alt=""></a></center></div>
 			
