--- a/pages/psicofilo.html
+++ b/pages/psicofilo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-<title>PASTORAL</title>
+<title>PSICOLOGÍA y FILOSOFÍA</title>
 <link href="../images/favicon2.ico" rel="shortcut icon" type="image/ico">
 <link href="../images/favicon2.ico" rel="icon" type="image/ico">
 
@@ -123,27 +123,26 @@
               <li><a href="#">...</a></li>
               <li class="active">....</li>
             </ol>
-            <h1>PASTORAL SANTA ROSA</h1>
+            <h1>TRABAJOS ESTUDIANTILES</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>...</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>....</a> </div>
             <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
-              <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
-			  <p>Querida comunidad educativa, </p>
-			  <p>Pertenecer es generar vínculos indisolubles, es una síntesis que puede definirse como Evangelio y Vida. Es así que nacen valores y actitudes que tienen una impronta propia de quienes iluminan lo cotidiano a la luz de la Palabra. </p>
-              <p>Gestar el cambio de nombre de la escuela, lleva tiempo, lleva sueños, lleva acompañamiento. Estamos haciendo historia y es difícil poner en palabras lo que condensa este momento tan trascendental.</p> 56
-              <p>Cuando Dios da un nombre nuevo quiere mostrar una nueva misión en relación con su plan de salvación y para manifestar su alianza, su bendición, el cumplimiento de su promesa.</p>
-			  <p>Abraham (padre enaltecido) pasa a llamarse Abraham (padre de multitudes). Sarai (princesa), a Sara (Madre de naciones). Jacob (el que suplanta), a Israel (fuerte con Dios). Simón (Dios ha escuchado), pasa a llamarse Pedro (piedra). </p>
-<p><blockquote> El nombre nuevo revela una nueva identidad: una nueva criatura 2Co 5,17</blockquote></p>
-<p>Al pasar de llamarse "Cervantes" (que manifiesta la excelencia de la cultura) a "Santa Rosa de Lima" (modelo de santidad) </p>
-<p>Dios nos invita a mirar la identidad más profunda de esta comunidad educativa que sin descuidar la formación cultural es misión en un lugar concreto, está llamada a transfigurar el barrio según el plan de Dios y buscar la santidad en lo cotidiano y sencillo de cada día como Rosa lo hizo. </p>
-<p>Santa Rosa tuvo siempre presente a Jesús en su vida. Su modo de obrar lo demostraba. 
-Queremos que este nuevo nombre no sea un cambio radical, sino una fuente de inspiración para lo que viene, pero siendo agradecidos con la gran historia y trayectoria de esta querida casa de estudios. </p>
-<p> Queremos que sea: una escuela que educa para la vida y una parroquia que evangeliza, donde Jesús sea el centro, mirando como el miro, hablando como el habló y actuando como él actuó. </p>
-<p>Hoy, queremos seguir soñando y celebramos todas las oportunidades que, tanto a ustedes, como a nosotros, nos permiten no perder las esperanzas en un mundo mejor y con mayores posibilidades. Donde hay sueños, donde hay alegría, ahí siempre está Jesús, porque Jesús es alegría y quiere ayudarnos a que esta permanezca todos los días. </p>
-<p>Todos juntos hagamos realidad el lema de nuestra Escuela: Colegio Parroquial Santa Rosa construyendo historia junto a VOS</p>
-<p>Quiero agradecer a DIOS a nuestro Obispo, Eduardo García, por confiar en este proyecto y acompañarme siempre con su cercanía y bendición. También agradezco a nuestra Inspectora Jefe, Mariana Suarez y al Equipo de Conducción que me acompaña en la tarea cotidiana. A todos los docentes, auxiliares y familias, por estar siempre presente adhiriendo al proyecto Institucional. </p>
-<p>Quiero agradecer la presencia de todos ustedes hoy, porque al ponerle fecha a un sueño, se convierte en meta. Una meta dividida en pasos se convierte en un plan. Un plan puesto en las manos de DIOS y acompañado de acciones con quienes están al lado nuestro, se vuelve realidad. Los llevo en mi corazón. Dios los bendiga. </p>
-<p><center>Pbro.. Walter Fabián Posca.</center></p>
-<p><center>Representante Legal. </center></p>
+              <h1>PSICOLOGIA Y PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES</h1>
+			  <p>PSICOLOGIA Y PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES
+A partir de la película “Intensa –Mente” realizamos un viaje al interior de nuestras propias emociones en pandemia
+
+ La pandemia del Covid-19 trajo muchos cambios en mi vida. Me costó muchísimo aceptar dos semanas antes que no festejaría mi cumpleaños de 15 (4 de abril), al que le había puesto grandísimas expectativas al igual que toda mi familia y mis amigos. Recibí muchos saludos el día de mi cumpleaños (1 de abril), pero sinceramente no me sentía muy bien. Pasaron los días y logré aceptarlo un poco más, porque puede entender que es algo global, pero igualmente muchas veces me acuerdo y me siento triste. Extraño abrazar a mi familia, porque soy muy unida a ellos. La mayoría del tiempo soy feliz. Muy feliz. Soy agradecida de la familia que tengo, mis perras, mis amigos, el deporte, que me hace tan bien, y disfruto muchísimo de todo, de lo más simple. Como todas las personas experimento el miedo de no saber qué va a suceder, si todo va a volver a la normalidad, y eso me asusta un poco, pero paso el tiempo jugando al fútbol, charlando mucho con mi mejor amigo y mi familia, pintando, disfruto muchísimo del tiempo. Pienso que es importante experimentar todas las emociones porque son lo que forjan a la persona. 
+La mayoría de mis recuerdos esenciales son alegres: la unión de mi familia, la risa con mis amigos, el fútbol, mi vida relacionada a Ucrania. Antes del aislamiento, y ahora también, planeaba cosas todo el tiempo porque me encanta trabajar para un futuro y disfruto mucho del hoy, entonces paso el tiempo entrenando, estudiando, leyendo, conversando, opinando. 
+Mi isla favorita es la de mi familia. Disfruto de abrazarlos, de aprender de ellos, de enseñarles a mis primitos, de jugar, de los almuerzos juntos. También otra isla tan importante como mi familia, es la isla del fútbol. Dónde soy realmente yo, donde busco conocer mi límite mientras mejoro, donde me refugio cuando todo alrededor está mal, un lazo con mi papá, con mis amigos, un pasatiempo, lo que da sentido a mi vida. 
+Como mencioné anteriormente, estoy haciendo muchísimas cosas que antes no hacía. Converso más con mi abuelo, pinto, escribo, leo más, pienso más, cocino, estoy más tiempo con mis mascotas. La verdad que este tiempo me cambió muchísimo, extraño mucho todo y no hay dudas que cuando termine todo va a ser distinto. Sueño con que el virus desaparezca y podamos volver a la normalidad. Me da miedo que no sea así, y no volvamos por mucho tiempo.
+Siempre fui muy unida a mi familia, por eso todos mis cumpleaños fueron importantísimos para mí. Tengo recuerdos corriendo sin parar con mis amigos, abrazando a mis padrinos. También los viajes a la playa con mi madrina y su familia. Guiando a mi primita en sus pasos, enseñándole a jugar, acompañándola al agua. La playa es mi lugar en el mundo. 
+Mis amigos son una parte importante de mi vida, en especial mi mejor amigo. Es quien me motiva a cumplir mis objetivos, quien tiene las palabras justas cuando no sé qué hacer, el que me escucha siempre y me transmite tranquilidad, el que me enseñó a reírme de las cosas malas que me pasan… él es sin duda muy importante para mí. 
+El parque de Imaginalandia, en la película de Intensamente, me recuerda bastante a mí. Imaginar infinitos trofeos, papas fritas, diferentes cosas que me hacen feliz. Es lindo imaginar, a veces, cosas que quizás no van a pasar, pero que nos hace bien, que estimulan la creatividad, motivan, nos divierten.
+Creo que mi mayor miedo es no poder lograr las cosas que quiero, y cumplir mis sueños. Me asusta pensar en una vida monótona. También tengo miedo a que le pase algo malo a las personas que quiero. Soy muy feliz y sueño con serlo siempre. Cumplir mis sueños, crecer. Pienso que, al ser felices, todo es mejor. La relación con uno mismo, con los demás, las ganas de progresar, de solucionar los problemas. Cuando uno es positivo busca la forma de solucionar sus problemas y disfruta de la vida.
+
+Una frase significativa del impacto de esta pandemia en la vida cotidiana:
+
+“son parates para razonar y crecer, son piedras para saltar y fortalecerse, son caminos que frente al deber de decidir cuál tomar nos hacen más sabios”
+</p>
 <!--<ul>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
