--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-<title>PASTORAL</title>
+<title>CALENDARIO DE EVENTOS</title>
 <link href="../images/favicon2.ico" rel="shortcut icon" type="image/ico">
 <link href="../images/favicon2.ico" rel="icon" type="image/ico">
 
@@ -123,27 +123,50 @@
               <li><a href="#">Technology</a></li>
               <li class="active">Mobile</li>
             </ol>
-            <h1>PASTORAL SANTA ROSA</h1>
+            <h1>EVENTOS DE NOVIEMBRE Y DICIEMBRE</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
-              <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
-			  <p>Querida comunidad educativa, </p>
-			  <p>Pertenecer es generar vínculos indisolubles, es una síntesis que puede definirse como Evangelio y Vida. Es así que nacen valores y actitudes que tienen una impronta propia de quienes iluminan lo cotidiano a la luz de la Palabra. </p>
-              <p>Gestar el cambio de nombre de la escuela, lleva tiempo, lleva sueños, lleva acompañamiento. Estamos haciendo historia y es difícil poner en palabras lo que condensa este momento tan trascendental.</p> 56
-              <p>Cuando Dios da un nombre nuevo quiere mostrar una nueva misión en relación con su plan de salvación y para manifestar su alianza, su bendición, el cumplimiento de su promesa.</p>
-			  <p>Abraham (padre enaltecido) pasa a llamarse Abraham (padre de multitudes). Sarai (princesa), a Sara (Madre de naciones). Jacob (el que suplanta), a Israel (fuerte con Dios). Simón (Dios ha escuchado), pasa a llamarse Pedro (piedra). </p>
-<p><blockquote> El nombre nuevo revela una nueva identidad: una nueva criatura 2Co 5,17</blockquote></p>
-<p>Al pasar de llamarse "Cervantes" (que manifiesta la excelencia de la cultura) a "Santa Rosa de Lima" (modelo de santidad) </p>
-<p>Dios nos invita a mirar la identidad más profunda de esta comunidad educativa que sin descuidar la formación cultural es misión en un lugar concreto, está llamada a transfigurar el barrio según el plan de Dios y buscar la santidad en lo cotidiano y sencillo de cada día como Rosa lo hizo. </p>
-<p>Santa Rosa tuvo siempre presente a Jesús en su vida. Su modo de obrar lo demostraba. 
-Queremos que este nuevo nombre no sea un cambio radical, sino una fuente de inspiración para lo que viene, pero siendo agradecidos con la gran historia y trayectoria de esta querida casa de estudios. </p>
-<p> Queremos que sea: una escuela que educa para la vida y una parroquia que evangeliza, donde Jesús sea el centro, mirando como el miro, hablando como el habló y actuando como él actuó. </p>
-<p>Hoy, queremos seguir soñando y celebramos todas las oportunidades que, tanto a ustedes, como a nosotros, nos permiten no perder las esperanzas en un mundo mejor y con mayores posibilidades. Donde hay sueños, donde hay alegría, ahí siempre está Jesús, porque Jesús es alegría y quiere ayudarnos a que esta permanezca todos los días. </p>
-<p>Todos juntos hagamos realidad el lema de nuestra Escuela: Colegio Parroquial Santa Rosa construyendo historia junto a VOS</p>
-<p>Quiero agradecer a DIOS a nuestro Obispo, Eduardo García, por confiar en este proyecto y acompañarme siempre con su cercanía y bendición. También agradezco a nuestra Inspectora Jefe, Mariana Suarez y al Equipo de Conducción que me acompaña en la tarea cotidiana. A todos los docentes, auxiliares y familias, por estar siempre presente adhiriendo al proyecto Institucional. </p>
-<p>Quiero agradecer la presencia de todos ustedes hoy, porque al ponerle fecha a un sueño, se convierte en meta. Una meta dividida en pasos se convierte en un plan. Un plan puesto en las manos de DIOS y acompañado de acciones con quienes están al lado nuestro, se vuelve realidad. Los llevo en mi corazón. Dios los bendiga. </p>
-<p><center>Pbro.. Walter Fabián Posca.</center></p>
-<p><center>Representante Legal. </center></p>
+            <div class="single_page_content"> <!-- <img class="img-center" src="../images/single_post_img.jpg" alt=""> -->
+              <h1>Eventos</h1>
+			  <table border=0 cellpadding=0 cellspacing=0 width=461 style='border-collapse:
+ collapse;table-layout:fixed;width:346pt'>
+ <col width=227 style='mso-width-source:userset;mso-width-alt:8301;width:170pt'>
+ <col width=234 style='mso-width-source:userset;mso-width-alt:8557;width:176pt'>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl68 width=227 style='height:15.0pt;width:170pt'>ACTIVIDADES
+  NIVEL PRIMARIO:</td>
+  <td class=xl69 width=234 style='width:176pt'>FECHAS Y HORARIOS</td>
+ </tr>
+ <tr height=40 style='height:30.0pt'>
+  <td height=40 class=xl67 style='height:30.0pt'>NOCHE DE TEATRO:</td>
+  <td class=xl65 width=234 style='width:176pt'>26/11, 19 Y 20 Hs.<br>
+    27/11, 19 Hs.</td>
+ </tr>
+ <tr height=60 style='height:45.0pt'>
+  <td height=60 class=xl67 style='height:45.0pt'>MUESTRA DE INGLÉS:</td>
+  <td class=xl65 width=234 style='width:176pt'>4/12, <br>
+    T.M: 10 y 11 Hs.<br>
+    T.T: 15 y 16 Hs.</td>
+ </tr>
+ <tr height=60 style='height:45.0pt'>
+  <td height=60 class=xl67 style='height:45.0pt'>LA MUESTRA NAVIDEÑA</td>
+  <td class=xl65 width=234 style='width:176pt'>será el 9/12 a las 19 hs. para
+  los tres niveles con previa celebración de Misa.</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl67 style='height:15.0pt'>ACTO DE COLACIÓN</td>
+  <td class=xl66>16/12 18:30HS MISA 19HS ACTO</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl67 style='height:15.0pt'>ACTO FIN DE CURSO</td>
+  <td class=xl66>18:30HS MISA 19HS ACTO</td>
+ </tr>
+ <![if supportMisalignedColumns]>
+ <tr height=0 style='display:none'>
+  <td width=227 style='width:170pt'></td>
+  <td width=234 style='width:176pt'></td>
+ </tr>
+ <![endif]>
+</table>
 <!--<ul>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
