--- a/pages/literatura.html
+++ b/pages/literatura.html
@@ -291,7 +291,7 @@
               </li>
             </ul>
           </div> -->
-          <div class="single_sidebar">
+          <!--<div class="single_sidebar">
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation" class="active"><a href="#category" aria-controls="home" role="tab" data-toggle="tab">Category</a></li>
               <li role="presentation"><a href="#video" aria-controls="profile" role="tab" data-toggle="tab">Video</a></li>
@@ -308,7 +308,7 @@
                   <li class="cat-item"><a href="#">Life &amp; Style</a></li>
                   <li class="cat-item"><a href="#">Photography</a></li>
                 </ul>
-              </div>
+              </div> -->
               <div role="tabpanel" class="tab-pane" id="video">
                 <div class="vide_area">
                   <iframe width="100%" height="250" src="http://www.youtube.com/embed/h5QWbURNEpA?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
