--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -124,6 +124,79 @@
               <li class="active">Mobile</li>
             </ol>
             <h1>NIVEL INICIAL</h1>
+			<div class=3DWordSection1>
+<h1> CRONOGRAMA DE ACTIVIDADES </h1>
+<p class=3DMsoNormal><span lang=3DEN-US><o:p>&nbsp;</o:p></span></p>
+
+<p class=3DMsoNormal><b style=3D'mso-bidi-font-weight:normal'><u><span lang=
+=3DES
+style=3D'mso-ansi-language:ES'>ACTIVIDADES NIVEL INICIAL:<span
+style=3D'mso-spacerun:yes'>                           </span><span
+style=3D'mso-spacerun:yes'>  </span><span
+style=3D'mso-spacerun:yes'>  </span>FECHAS Y HORARIOS PARA AGENDAR<o:p></o:=
+p></span></u></b></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>MUESTRA
+ DE
+EXPRESIÓN CORPORAL:<span style=3D'mso-spacerun:yes'>           </span><span
+style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
+n><span
+style=3D'mso-spacerun:yes'> </span><span
+style=3D'mso-spacerun:yes'> </span>VIERNES<span style=3D'mso-spacerun:yes'> 
+</span>20/11 – 19:00 HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>MUESTRA
+ DE
+INGLÉS:<span
+style=3D'mso-spacerun:yes'>                                           
+</span>MARTES 1/12 – 19: 00 HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:0cm;line-height:normal'><span l=
+ang=3DES
+style=3D'mso-ansi-language:ES'>MUESTRA NAVIDEÑA INSTITUCIONAL <o:p></o:p></=
+span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:0cm;line-height:normal'><span l=
+ang=3DES
+style=3D'mso-ansi-language:ES'>Y CELEBRACIÓN DE LA SANTA MISA:<span
+style=3D'mso-spacerun:yes'>                   </span>MIÉRCOLES 9/12 - 19: 0=
+0 HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><o:p></o:p></span></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>ACTO DE
+COLACIÓN:<span style=3D'mso-spacerun:yes'>                                 
+      
+</span><span style=3D'mso-spacerun:yes'>  </span><span
+style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
+n><span
+style=3D'mso-spacerun:yes'> </span>LUNES 14/12- 18:30 HS.<o:p></o:p></span>=
+</p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>PESEBRE
+VIVIENTE:<span
+style=3D'mso-spacerun:yes'>                                          </span=
+><span
+style=3D'mso-spacerun:yes'>   </span><span style=3D'mso-spacerun:yes'>  </s=
+pan><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
+>JUEVES
+17/12- 19:00 HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>ACTO FI=
+N DE CICLO
+LECTIVO 2020:<span style=3D'mso-spacerun:yes'>              </span><span
+style=3D'mso-spacerun:yes'>   </span><span style=3D'mso-spacerun:yes'>  </s=
+pan><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
+><span
+style=3D'mso-spacerun:yes'> </span>VIERNES 18/12 – 18:30 HS.<o:p></o:p></sp=
+an></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><span
+style=3D'mso-spacerun:yes'>               </span><o:p></o:p></span></p>
+
+</div>
             <!-- <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
             <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
               <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
