--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -125,7 +125,134 @@
             </ol>
             <h1>SECUNDARIO SANTA ROSA</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
+            <div class="single_page_content"> <!-- <img class="img-center" src="../images/single_post_img.jpg" alt  -->
+			<h1> CRONOGRAMA DE EVENTOS </h1>
+			<div class=3DWordSection1>
+
+<p class=3DMsoNormal><span lang=3DEN-US><o:p>&nbsp;</o:p></span></p>
+
+<p class=3DMsoNormal><b style=3D'mso-bidi-font-weight:normal'><u><span lang=
+=3DES
+style=3D'mso-ansi-language:ES'>ACTIVIDADES NIVEL SECUNDARIO:<span
+style=3D'mso-spacerun:yes'>                 </span><span
+style=3D'mso-spacerun:yes'>  </span>FECHAS Y HORARIOS PARA AGENDAR<o:p></o:=
+p></span></u></b></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
+height:
+115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
+nt-family:
+Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
+";
+mso-ansi-language:ES'>NOCHE DE TEATRO<span
+style=3D'mso-spacerun:yes'>                                                
+</span>JUEVES 19/11<span style=3D'mso-spacerun:yes'>    </span><span
+style=3D'mso-spacerun:yes'>        </span><span
+style=3D'mso-spacerun:yes'>  </span>19:00 Hs.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
+height:
+115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
+nt-family:
+Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
+";
+mso-ansi-language:ES'>MUESTRA DE DANZA<span
+style=3D'mso-spacerun:yes'>                                            
+</span>MIÉRCOLES<span style=3D'mso-spacerun:yes'>  </span>25/11<span
+style=3D'mso-spacerun:yes'>    </span><span style=3D'mso-spacerun:yes'> </s=
+pan><span
+style=3D'mso-spacerun:yes'> </span>19:00 Hs.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
+height:
+115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
+nt-family:
+Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
+";
+mso-ansi-language:ES'>MUESTRA DE INGLÉS<span
+style=3D'mso-spacerun:yes'>                                             
+</span>MARTES 3/12 <span style=3D'mso-spacerun:yes'>    </span><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>       =
+ </span>19:00
+Hs.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
+ght:
+normal'><span lang=3DES style=3D'mso-ansi-language:ES'>MUESTRA NAVIDEÑA
+INSTITUCIONAL <o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
+ght:
+normal'><span lang=3DES style=3D'mso-ansi-language:ES'>Y CELEBRACIÓN DE LA =
+SANTA
+MISA:<span style=3D'mso-spacerun:yes'>  </span><span
+style=3D'mso-spacerun:yes'>                 </span>MIÉRCOLES 9/12<span
+style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
+n><span
+style=3D'mso-spacerun:yes'>    </span>19: 00 HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
+ght:
+normal'><span lang=3DES style=3D'mso-ansi-language:ES'><o:p>&nbsp;</o:p></s=
+pan></p>
+
+<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
+height:
+115%;tab-stops:135.75pt'><span lang=3DES style=3D'mso-ascii-font-family:Cal=
+ibri;
+mso-fareast-font-family:Calibri;mso-hansi-font-family:Calibri;mso-bidi-font=
+-family:
+"Times New Roman";mso-ansi-language:ES'>ACTO COLACIÓN<span
+style=3D'mso-spacerun:yes'>                                                =
+    
+</span>SÁBADO 12/12-<span style=3D'mso-spacerun:yes'>     </span><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>    </s=
+pan>19:00
+Hs. <o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
+mso-ansi-language:
+ES'>PESEBRE VIVIENTE:<span
+style=3D'mso-spacerun:yes'>                                          </span=
+><span
+style=3D'mso-spacerun:yes'>   </span><span style=3D'mso-spacerun:yes'>  </s=
+pan><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
+>JUEVES
+17/12-<span style=3D'mso-spacerun:yes'>     </span><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>  </spa=
+n><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>  </spa=
+n><span
+style=3D'mso-spacerun:yes'> </span>19:00 HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
+mso-ansi-language:
+ES'>ACTO FIN DE CICLO LECTIVO 2020:<span style=3D'mso-spacerun:yes'>       =
+      
+</span><span style=3D'mso-spacerun:yes'>   </span><span
+style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
+n><span
+style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
+>VIERNES
+18/12 – <span style=3D'mso-spacerun:yes'> </span><span
+style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
+n><span
+style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
+n>18:30
+HS.<o:p></o:p></span></p>
+
+<p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
+mso-ansi-language:
+ES'><o:p>&nbsp;</o:p></span></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><o:p>&n=
+bsp;</o:p></span></p>
+
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><span
+style=3D'mso-spacerun:yes'>               </span><o:p></o:p></span></p>
+
+</div>
               <!--<h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
 			  <p>Querida comunidad educativa, </p>
 			  <p>Pertenecer es generar vínculos indisolubles, es una síntesis que puede definirse como Evangelio y Vida. Es así que nacen valores y actitudes que tienen una impronta propia de quienes iluminan lo cotidiano a la luz de la Palabra. </p>
