--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -144,8 +144,8 @@ height:
 115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
 nt-family:
 Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
-";
-mso-ansi-language:ES'>NOCHE DE TEATRO<span
+""Times New Roman";mso-ansi-language:ES'>
+<mso-ansi-language:ES'>NOCHE DE TEATRO<span
 style=3D'mso-spacerun:yes'>                                                
 </span>JUEVES 19/11<span style=3D'mso-spacerun:yes'>    </span><span
 style=3D'mso-spacerun:yes'>        </span><span
@@ -156,8 +156,8 @@ height:
 115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
 nt-family:
 Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
-";
-mso-ansi-language:ES'>MUESTRA DE DANZA<span
+""Times New Roman";mso-ansi-language:ES'>
+<mso-ansi-language:ES'>MUESTRA DE DANZA<span
 style=3D'mso-spacerun:yes'>                                            
 </span>MIÉRCOLES<span style=3D'mso-spacerun:yes'>  </span>25/11<span
 style=3D'mso-spacerun:yes'>    </span><span style=3D'mso-spacerun:yes'> </s=
@@ -169,8 +169,8 @@ height:
 115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
 nt-family:
 Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
-";
-mso-ansi-language:ES'>MUESTRA DE INGLÉS<span
+""Times New Roman";mso-ansi-language:ES'>
+<mso-ansi-language:ES'>MUESTRA DE INGLÉS<span
 style=3D'mso-spacerun:yes'>                                             
 </span>MARTES 3/12 <span style=3D'mso-spacerun:yes'>    </span><span
 style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>       =
@@ -184,7 +184,7 @@ INSTITUCIONAL <o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
 ght:
-normal'><span lang=3DES style=3D'mso-ansi-language:ES'>Y CELEBRACIÓN DE LA =
+normal'><span lang=3DES style=3D'mso-ansi-language:ES'>Y CELEBRACIÓN DE LA 
 SANTA
 MISA:<span style=3D'mso-spacerun:yes'>  </span><span
 style=3D'mso-spacerun:yes'>                 </span>MIÉRCOLES 9/12<span
@@ -204,7 +204,7 @@ ibri;
 mso-fareast-font-family:Calibri;mso-hansi-font-family:Calibri;mso-bidi-font=
 -family:
 "Times New Roman";mso-ansi-language:ES'>ACTO COLACIÓN<span
-style=3D'mso-spacerun:yes'>                                                =
+style=3D'mso-spacerun:yes'>                                                
     
 </span>SÁBADO 12/12-<span style=3D'mso-spacerun:yes'>     </span><span
 style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>    </s=
@@ -229,7 +229,7 @@ style=3D'mso-spacerun:yes'> </span>19:00 HS.<o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
 mso-ansi-language:
-ES'>ACTO FIN DE CICLO LECTIVO 2020:<span style=3D'mso-spacerun:yes'>       =
+ES'>ACTO FIN DE CICLO LECTIVO 2020:<span style=3D'mso-spacerun:yes'>       
       
 </span><span style=3D'mso-spacerun:yes'>   </span><span
 style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
@@ -245,10 +245,9 @@ HS.<o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
 mso-ansi-language:
-ES'><o:p>&nbsp;</o:p></span></p>
+ES'><o:p></o:p></span></p>
 
-<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><o:p>&n=
-bsp;</o:p></span></p>
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><o:p>;</o:p></span></p>
 
 <p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><span
 style=3D'mso-spacerun:yes'>               </span><o:p></o:p></span></p>
