--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -124,6 +124,10 @@
               <li class="active">Mobile</li>
             </ol>
             <h1>NIVEL INICIAL</h1>
+			<h1> TARDES DE FABULA EN NIVEL INICIAL </H1>
+			<div class="single_page_content"> <img class="img-center" src="../images/inicial/since.jpeg" alt="">
+			<div class=3DWordSection1>
+			<div class="single_page_content"> <img class="img-center" src="../images/inicial/ECHO.jpeg" alt="">
 			<div class=3DWordSection1>
 <h1> CRONOGRAMA DE ACTIVIDADES </h1>
 <p class=3DMsoNormal><span lang=3DEN-US><o:p>&nbsp;</o:p></span></p>
